[package]
name = "ocean-generator"
version = "0.1.0"
edition = "2021"
description = "Library and CLI tool for generating ocean mesh surfaces with wave simulation"
authors = ["Ocean Generator Authors"]
license = "MIT"

[lib]
name = "ocean_generator"
path = "src/lib.rs"

[[bin]]
name = "ocean-generator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
glam = "0.24"
anyhow = "1.0"
rayon = "1.7"
rustfft = "6.1.0"
num-complex = "0.4.4"
mesh-tools = "0.4.0"
nalgebra = "0.32.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.static]
inherits = "release"
lto = true
panic = "abort"
strip = true

# Enable static linking for the static profile
[target.'cfg(target_env = "musl")'.dependencies]
# Empty block to configure musl target
